[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/UI/DefaultFocusItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://resources/textures/sprite/social_twitter.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Menus/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://resources/themes/basic_theme.tres" type="Theme" id=4]
[ext_resource path="res://resources/textures/sprite/social_ludum.png" type="Texture" id=5]
[ext_resource path="res://resources/textures/sprite/social_itch.png" type="Texture" id=6]
[ext_resource path="res://resources/textures/aseprite/menu/town_bg.png" type="Texture" id=7]
[ext_resource path="res://resources/sound/music_loops/menu_crystals.ogg" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.937255, 0.980392, 0.980392, 0.756863 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGColour" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGTex" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )

[node name="GameButtons" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 16.0
margin_right = 71.0
margin_bottom = 84.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnPlay" type="Button" parent="GameButtons"]
margin_right = 63.0
margin_bottom = 12.0
text = "Play"

[node name="DefaultFocusItem" parent="GameButtons/BtnPlay" instance=ExtResource( 1 )]

[node name="BtnOptions" type="Button" parent="GameButtons"]
margin_top = 16.0
margin_right = 63.0
margin_bottom = 28.0
text = "Options"

[node name="BtnCredits" type="Button" parent="GameButtons"]
margin_top = 32.0
margin_right = 63.0
margin_bottom = 44.0
text = "Credits"

[node name="BtnQuit" type="Button" parent="GameButtons"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 60.0
text = "Quit"

[node name="MetaData" type="PanelContainer" parent="."]
margin_left = 224.0
margin_top = 208.0
margin_right = 392.0
margin_bottom = 288.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MetaData"]
margin_right = 168.0
margin_bottom = 80.0

[node name="VBoxContainer" type="VBoxContainer" parent="MetaData/CenterContainer"]
margin_left = 10.0
margin_top = 8.0
margin_right = 158.0
margin_bottom = 72.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MetaData/CenterContainer/VBoxContainer"]
margin_right = 148.0
margin_bottom = 16.0
alignment = 2

[node name="BtnTwitter" type="Button" parent="MetaData/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 92.0
margin_right = 108.0
margin_bottom = 16.0
hint_tooltip = "My Twitter"
icon = ExtResource( 2 )
flat = true

[node name="BtnLudum" type="Button" parent="MetaData/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 112.0
margin_right = 128.0
margin_bottom = 16.0
hint_tooltip = "Ludum Dare submission page"
icon = ExtResource( 5 )
flat = true

[node name="BtnItch" type="Button" parent="MetaData/CenterContainer/VBoxContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 148.0
margin_bottom = 16.0
hint_tooltip = "Game page on ItchIO"
icon = ExtResource( 6 )
flat = true

[node name="Label" type="Label" parent="MetaData/CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 148.0
margin_bottom = 32.0
text = "Created for Ludum Dare 49"

[node name="Label2" type="Label" parent="MetaData/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 148.0
margin_bottom = 48.0
text = "Theme : \"Unstable\""

[node name="Label3" type="Label" parent="MetaData/CenterContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 148.0
margin_bottom = 64.0
text = "Created by QueenOfSquiggles"

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 184.0
margin_top = 24.0
margin_right = 284.0
margin_bottom = 89.0
bbcode_enabled = true
bbcode_text = "
[wave]The Forgotten
World
[/wave]"
text = "
The Forgotten
World
"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[connection signal="pressed" from="GameButtons/BtnPlay" to="." method="_on_BtnPlay_pressed"]
[connection signal="pressed" from="GameButtons/BtnOptions" to="." method="_on_BtnOptions_pressed"]
[connection signal="pressed" from="GameButtons/BtnCredits" to="." method="_on_BtnCredits_pressed"]
[connection signal="pressed" from="GameButtons/BtnQuit" to="." method="_on_BtnQuit_pressed"]
[connection signal="pressed" from="MetaData/CenterContainer/VBoxContainer/HBoxContainer/BtnTwitter" to="." method="_on_BtnTwitter_pressed"]
[connection signal="pressed" from="MetaData/CenterContainer/VBoxContainer/HBoxContainer/BtnLudum" to="." method="_on_BtnLudum_pressed"]
[connection signal="pressed" from="MetaData/CenterContainer/VBoxContainer/HBoxContainer/BtnItch" to="." method="_on_BtnItch_pressed"]
